# autop4config

./: .gitignore  LICENSE  README.md  autop4config.conf.example  autop4config.py  pyproject.toml
