[tool.poetry]
name = "autop4config"
version = "0.0.1"
description = "Automatic p4config generator."
authors = ["Ben Rog-Wilhelm <zorba-git-sharon-vfio@pavlovian.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.2"
p4python = "^2022.1.2405607"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
